# veda-python-client

./: README.md  pyproject.toml  setup.cfg  setup.py
doc/: README.md  advanced_usage.md  api_reference.md  data_models.md  error_handling.md  examples.md  getting_started.md  index.md  installation.md
examples/: authenticate.py
tests/: test_client.py  test_models.py
veda_client/: __init__.py  client.py  exceptions.py  models.py  utils.py
