[metadata]
name = veda-client
version = 0.1.3
description = Python client for the Veda Platform API
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Tracker = https://github.com/yourusername/veda-python-client/issues
    Source Code = https://github.com/yourusername/veda-python-client

[options]
packages = find:
install_requires =
    requests>=2.25.0
python_requires = >=3.6

[options.packages.find]
exclude =
    tests
    examples

[options.extras_require]
dev =
    pytest>=6.0.0
    black>=21.5b2
    isort>=5.9.1
    mypy>=0.812
    flake8>=3.9.2
    twine>=3.4.1
